Collaborator 2 exercices completed

--- a/Collaborative coding.ipynb
+++ b/Collaborative coding.ipynb
@@ -38,20 +38,42 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eccb4045",
+   "id": "59053098",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nbimporter in c:\\programdata\\anaconda3\\lib\\site-packages (0.3.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "## Modify this cell by importing all the necessary modules you need to solve the assigmnent. Observe that we are importing\n",
-    "## the library nbimporter. You will need it for calling fuctions created in other notebooks. \n",
-    "import nbimporter\n",
-    "import pandas as pd\n",
-    "\n"
+    "pip install nbimporter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "id": "eccb4045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Import the necessary modules\n",
+    "import nbimporter\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Import the functions that we have created\n",
+    "from normalize_func import normalize\n",
+    "from scat_plt_func import scat_plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "78a064a3",
    "metadata": {},
    "outputs": [
@@ -61,7 +83,7 @@
        "46368"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "8f8690e3",
    "metadata": {},
    "outputs": [
@@ -291,7 +313,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,12 +372,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "03f75ef3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# Adding the 'subject_id' variable based on the 'name' variable\n",
+    "df['subject_id'] = df.name.str[9:12]\n",
+    "\n",
+    "# Adding the 'trial' variable based on the 'name' variable\n",
+    "df['trial'] = 't' + df.name.str[-1]\n",
+    "\n",
+    "# Removing the 'name' variable\n",
+    "df = df.drop('name', axis=1)"
    ]
   },
   {
@@ -393,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
