Collaborator 2 changes in the scatt_plt_func.ipynb file

--- a/scat_plt_func.ipynb
+++ b/scat_plt_func.ipynb
@@ -21,7 +21,8 @@
     "    list_groups = groups.unique()\n",
     "    for g in list_groups:\n",
     "        plt.scatter(x = var1[groups == g], y = var2[groups == g], label = g)\n",
-    "    plt.legend()"
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   }
  ],
