Collaborator 2 changes in the normalize_func.ipynb file

--- a/normalize_func.ipynb
+++ b/normalize_func.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2a701cd",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "    norm_df = df.copy()\n",
     "    if op == 0:\n",
     "        for col in norm_df.columns:\n",
-    "            if type(col) == str or norm_df[col].nunique() < 10:\n",
+    "            if norm_df[col].dtype != 'float64' or  norm_df[col].nunique() < 10:\n",
     "                continue\n",
     "            else:\n",
     "                norm_df[col] = (norm_df[col] - norm_df[col].mean())/norm_df[col].std()\n",
     "    elif op == 1:\n",
     "        for col in norm_df.columns:\n",
-    "            if type(col) == str or norm_df[col].nunique() < 10:\n",
+    "            if norm_df[col].dtype != 'float64' or  norm_df[col].nunique() < 10:\n",
     "                continue\n",
     "            else:\n",
     "                norm_df[col] = (norm_df[col] - norm_df[col].min())/(norm_df[col].max() - norm_df[col].min())\n",
