Adding my changes, renaming my main function file

--- a/Collaborative coding.ipynb
+++ b/Collaborative coding.ipynb
@@ -56,6 +56,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a5105766-20b0-4ba9-a09f-8a05b987073a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nbimporter didn't work for me. Unfortunately, the chosen library shouldn't be used anymore.\n",
+    "# https://github.com/grst/nbimporter\n",
+    "# \"Update 2019-06: I do not recommend anymore to use nbimporter.\"\n",
+    "# It also states that the correct approach is to create a file \".py\" with the desired functions and import as normal functions.\n",
+    "# To be able to proceed and not waste time with this, a solution that I found is to run the required notebooks.\n",
+    "%run fibbo_func.ipynb\n",
+    "%run renamevars_func.ipynb\n",
+    "%run normalize_func.ipynb\n",
+    "%run scat_plt_func.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "eccb4045",
    "metadata": {},
@@ -68,7 +86,8 @@
     "\n",
     "# Import the functions that we have created\n",
     "from normalize_func import normalize\n",
-    "from scat_plt_func import scat_plt"
+    "from scat_plt_func import scat_plt\n",
+    "from renamevars_func import renamevars, analyzedf"
    ]
   },
   {
@@ -107,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8f8690e3",
    "metadata": {},
    "outputs": [
@@ -313,7 +332,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +360,330 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "dict_names = {'MDVP:Fo(Hz)':'avFF',\n",
+    "              'MDVP:Fhi(Hz)':'maxFF', \n",
+    "              'MDVP:Flo(Hz)':'minFF',\n",
+    "              'MDVP:Jitter(%)': 'percJitter',\n",
+    "              'MDVP:Jitter(Abs)':'absJitter' ,\n",
+    "              'MDVP:RAP': 'rap',\n",
+    "              'MDVP:PPQ': 'ppq',\n",
+    "              'Jitter:DDP': 'ddp',\n",
+    "              'MDVP:Shimmer' : 'lShimer',\n",
+    "              'MDVP:Shimmer(dB)': 'dbShimer',\n",
+    "              'Shimmer:APQ3':'apq3',\n",
+    "              'Shimmer:APQ5': 'apq5',\n",
+    "              'MDVP:APQ':'apq',\n",
+    "              'Shimmer:DDA':'dda'}\n",
+    "df = renamevars(df, dict_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "31921bf1-4cb6-4438-9f4a-bec05fdf0e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (195, 24)\n",
+      "\n",
+      " Column: name \n",
+      "        count unique             top freq\n",
+      "status                                  \n",
+      "0         48     48  phon_R01_S07_1    1\n",
+      "1        147    147  phon_R01_S01_1    1 \n",
+      "\n",
+      "\n",
+      " Column: avFF \n",
+      "         count        mean        std      min       25%      50%      75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  181.937771  52.731067  110.739  120.9475  198.996  229.077   \n",
+      "1       147.0  145.180762  32.348050   88.333  117.5720  145.174  170.071   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       260.105  \n",
+      "1       223.361   \n",
+      "\n",
+      "\n",
+      " Column: maxFF \n",
+      "         count        mean        std      min        25%       50%        75%  \\\n",
+      "status                                                                          \n",
+      "0        48.0  223.636750  96.727067  113.597  139.41325  231.1615  251.23925   \n",
+      "1       147.0  188.441463  88.339180  102.145  133.77650  163.3350  207.16050   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       592.030  \n",
+      "1       588.518   \n",
+      "\n",
+      "\n",
+      " Column: minFF \n",
+      "         count        mean        std     min       25%       50%      75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  145.207292  58.757070  74.287  98.24375  113.9385  199.183   \n",
+      "1       147.0  106.893558  32.274358  65.476  80.87550   99.7700  129.240   \n",
+      "\n",
+      "           max  \n",
+      "status          \n",
+      "0       239.17  \n",
+      "1       199.02   \n",
+      "\n",
+      "\n",
+      " Column: percJitter \n",
+      "         count      mean       std      min       25%       50%      75%  \\\n",
+      "status                                                                    \n",
+      "0        48.0  0.003866  0.002055  0.00178  0.002655  0.003355  0.00453   \n",
+      "1       147.0  0.006989  0.005240  0.00168  0.004005  0.005440  0.00767   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.01360  \n",
+      "1       0.03316   \n",
+      "\n",
+      "\n",
+      " Column: absJitter \n",
+      "         count      mean       std       min      25%       50%      75%  \\\n",
+      "status                                                                    \n",
+      "0        48.0  0.000023  0.000015  0.000007  0.00001  0.000025  0.00003   \n",
+      "1       147.0  0.000051  0.000037  0.000010  0.00003  0.000040  0.00006   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.00008  \n",
+      "1       0.00026   \n",
+      "\n",
+      "\n",
+      " Column: rap \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.001925  0.001066  0.00092  0.001332  0.001625  0.001908   \n",
+      "1       147.0  0.003757  0.003241  0.00068  0.002030  0.002840  0.004100   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.00624  \n",
+      "1       0.02144   \n",
+      "\n",
+      "\n",
+      " Column: ppq \n",
+      "         count      mean       std      min      25%       50%       75%  \\\n",
+      "status                                                                    \n",
+      "0        48.0  0.002056  0.000943  0.00106  0.00148  0.001775  0.002228   \n",
+      "1       147.0  0.003900  0.002998  0.00092  0.00219  0.003140  0.004360   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.00564  \n",
+      "1       0.01958   \n",
+      "\n",
+      "\n",
+      " Column: ddp \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.005776  0.003199  0.00276  0.003998  0.004875  0.005725   \n",
+      "1       147.0  0.011273  0.009724  0.00204  0.006085  0.008530  0.012300   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.01873  \n",
+      "1       0.06433   \n",
+      "\n",
+      "\n",
+      " Column: lShimer \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.017615  0.005544  0.00954  0.014475  0.016705  0.020210   \n",
+      "1       147.0  0.033658  0.019970  0.01022  0.018295  0.028380  0.042525   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.04087  \n",
+      "1       0.11908   \n",
+      "\n",
+      "\n",
+      " Column: dbShimer \n",
+      "         count      mean       std    min    25%    50%      75%    max\n",
+      "status                                                                \n",
+      "0        48.0  0.162958  0.057822  0.085  0.129  0.154  0.18925  0.405\n",
+      "1       147.0  0.321204  0.207798  0.090  0.168  0.263  0.39450  1.302 \n",
+      "\n",
+      "\n",
+      " Column: apq3 \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.009504  0.003456  0.00468  0.007350  0.008775  0.011512   \n",
+      "1       147.0  0.017676  0.010797  0.00455  0.009135  0.014840  0.022815   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.02336  \n",
+      "1       0.05647   \n",
+      "\n",
+      "\n",
+      " Column: apq5 \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.010509  0.003231  0.00606  0.008193  0.010225  0.011980   \n",
+      "1       147.0  0.020285  0.012847  0.00570  0.010575  0.016500  0.024935   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.02498  \n",
+      "1       0.07940   \n",
+      "\n",
+      "\n",
+      " Column: apq \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.013305  0.003825  0.00719  0.011235  0.013015  0.015945   \n",
+      "1       147.0  0.027600  0.018062  0.00811  0.015555  0.021570  0.034825   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.02745  \n",
+      "1       0.13778   \n",
+      "\n",
+      "\n",
+      " Column: dda \n",
+      "         count      mean       std      min      25%      50%       75%  \\\n",
+      "status                                                                   \n",
+      "0        48.0  0.028511  0.010368  0.01403  0.02206  0.02633  0.034540   \n",
+      "1       147.0  0.053027  0.032391  0.01364  0.02740  0.04451  0.068455   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.07008  \n",
+      "1       0.16942   \n",
+      "\n",
+      "\n",
+      " Column: NHR \n",
+      "         count      mean       std      min       25%       50%       75%  \\\n",
+      "status                                                                     \n",
+      "0        48.0  0.011483  0.019088  0.00065  0.004188  0.004825  0.009213   \n",
+      "1       147.0  0.029211  0.044447  0.00231  0.008445  0.016580  0.027960   \n",
+      "\n",
+      "            max  \n",
+      "status           \n",
+      "0       0.10715  \n",
+      "1       0.31482   \n",
+      "\n",
+      "\n",
+      " Column: HNR \n",
+      "         count       mean       std     min       25%     50%       75%     max\n",
+      "status                                                                        \n",
+      "0        48.0  24.678750  3.434540  17.883  22.99325  24.997  26.13925  33.047\n",
+      "1       147.0  20.974048  4.339143   8.441  18.78200  21.414  24.16450  29.928 \n",
+      "\n",
+      "\n",
+      " Column: status \n",
+      "        count unique top freq\n",
+      "status                      \n",
+      "0         48      1   0   48\n",
+      "1        147      1   1  147 \n",
+      "\n",
+      "\n",
+      " Column: RPDE \n",
+      "         count      mean       std       min       25%       50%       75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  0.442552  0.092199  0.256570  0.372126  0.435368  0.507748   \n",
+      "1       147.0  0.516816  0.101254  0.263654  0.439064  0.530529  0.604573   \n",
+      "\n",
+      "             max  \n",
+      "status            \n",
+      "0       0.663842  \n",
+      "1       0.685151   \n",
+      "\n",
+      "\n",
+      " Column: DFA \n",
+      "         count      mean       std       min       25%       50%       75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  0.695716  0.051346  0.626710  0.654291  0.682527  0.742284   \n",
+      "1       147.0  0.725408  0.054786  0.574282  0.685569  0.726652  0.764868   \n",
+      "\n",
+      "             max  \n",
+      "status            \n",
+      "0       0.785714  \n",
+      "1       0.825288   \n",
+      "\n",
+      "\n",
+      " Column: spread1 \n",
+      "         count      mean       std       min       25%       50%       75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0 -6.759264  0.642782 -7.964984 -7.257665 -6.826448 -6.350146   \n",
+      "1       147.0 -5.333420  0.970792 -7.120925 -6.038300 -5.440040 -4.664067   \n",
+      "\n",
+      "             max  \n",
+      "status            \n",
+      "0      -5.198864  \n",
+      "1      -2.434031   \n",
+      "\n",
+      "\n",
+      " Column: spread2 \n",
+      "         count      mean       std       min       25%       50%       75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  0.160292  0.062982  0.006274  0.120623  0.167356  0.193766   \n",
+      "1       147.0  0.248133  0.077809  0.063412  0.199507  0.240875  0.303660   \n",
+      "\n",
+      "             max  \n",
+      "status            \n",
+      "0       0.291954  \n",
+      "1       0.450493   \n",
+      "\n",
+      "\n",
+      " Column: D2 \n",
+      "         count      mean       std       min       25%       50%       75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  2.154491  0.310269  1.423287  1.974217  2.129510  2.339487   \n",
+      "1       147.0  2.456058  0.375742  1.765957  2.180933  2.439597  2.668479   \n",
+      "\n",
+      "             max  \n",
+      "status            \n",
+      "0       2.882450  \n",
+      "1       3.671155   \n",
+      "\n",
+      "\n",
+      " Column: PPE \n",
+      "         count      mean       std       min       25%       50%       75%  \\\n",
+      "status                                                                      \n",
+      "0        48.0  0.123017  0.044820  0.044539  0.094658  0.115118  0.147761   \n",
+      "1       147.0  0.233828  0.084271  0.093193  0.170103  0.222716  0.274397   \n",
+      "\n",
+      "             max  \n",
+      "status            \n",
+      "0       0.252404  \n",
+      "1       0.527367   \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyzedf(df, 'status')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "734d57a1-f504-42ed-b9dd-1d0625bd8b29",
+   "metadata": {},
+   "source": [
+    "<b>How many observations do you have?</b>\n",
+    "The shape tells us 195 rows and 24 columns, with 2 columns being Name and Status, so 22 values to be analyzed.\n",
+    "We have Patients(147) and Controls(48)\n",
+    "\n",
+    "<b>Are there apparent differences between controls and patients? </b>\n",
+    "Yes there are. We can cleary see difference on some, for example in the variable avFF, where in the describe for that column, all the values are higher for controls. \n",
+    "\n",
+    "<b>Is the variability comparable?</b>\n",
+    "Yes it is. For example in the variable minFF, we have a much higher std (variability) 181.25% higher for controls than for patients.  \n",
+    "\n",
+    "<b>If you check the minimum and maximum values are there outliers? </b>\n",
+    "Yes there are. For example in the minFF we can clearly see that there are some results that if you get the mean and subtract or add the std, you will still have some values that are way bewound what would be expected.\n",
+    "\n",
+    "<b>If so, what will you do with them?</b>\n",
+    "Depends on the analyzes but a approach could be to study the outliers individually on each column that we can identify the presence of those, and plot then into a box plot, to confirm the outliers. Depending on the analyses that we want to do, might be the case to remove those."
    ]
   },
   {
@@ -588,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
