Modifications in group_and_average

--- a/group_and_average.ipynb
+++ b/group_and_average.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2d35b79c",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,29 @@
     "    `av_df`: averaged and aggregated DataFrame\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Group by \n",
-    "    df_group= df.groupby(gv)\n",
+    "    # Convert the 'status' column from categorical to numerical\n",
+    "    df['status'] = df['status'].astype(int)\n",
+    "\n",
+    "    # Only numeric variables\n",
+    "    numeric_columns=df.copy()\n",
+    "    numeric_columns = df.select_dtypes(include=['number'])\n",
     "    \n",
     "    # Mean for each group\n",
-    "    av_df= df_group.mean().reset_index()\n",
+    "    av_df= df.groupby(gv)[numeric_columns.columns].mean().reset_index()\n",
     "    \n",
-    "    return av_df\n"
+    "    av_df['status'] = av_df['status'].astype('category')\n",
+    "\n",
+    "    return av_df\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9f2f582",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
